bin_PROGRAMS = passphrase-identity

passphrase_identity_CFLAGS = @PASSPHRASE_IDENTITY_CFLAGS@ @SODIUM_CFLAGS@
passphrase_identity_LDFLAGS = @SODIUM_LIBS@

passphrase_identity_SOURCES = \
	buffer.c \
	buffer_writer.c \
	main.c \
	memory.c \
	openssh.c \
	sha1.c \
	openpgp.c \
	profile.c \
	readpassphrase.c
